--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Check file types
       shell: bash
       run: |
-        export result=`find . -type f | xargs file | grep -E -v "(ASCII text|UTF-8 Unicode text|PNG|SVG|PDF|XML|ar archive|PostScript|empty|Qt Resource|MS Windows)" | wc -l
+        export result=`find . -type f | xargs file | grep -E -v "(ASCII text|UTF-8 Unicode text|PNG|SVG|PDF|XML|ar archive|PostScript|empty|Qt Resource|MS Windows)" | wc -l`
         find . -type f | xargs file | grep -E -v "(ASCII text|UTF-8 Unicode text|PNG|SVG|PDF|XML|ar archive|PostScript|empty|Qt Resource|MS Windows)"
         if [ $result -ne 0 ]; then
           echo "Found files with unknown encoding!"
