Add building of the doxygen internal documentation to CMake
The doxygen internal documentation is part of the GitHub actions and is published to http://doxygen.github.io/doxygen, so it is logical create the possibility to build the internal documentation with the aid of CMake and deploy those results.

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -393,9 +393,15 @@ jobs:
       if: matrix.config.name == 'Ubuntu Latest GCC Release'
       
     - name: Generate Internal documentation
-      shell: bash
+      shell: cmake -P {0}
       run: |
-        build/bin/doxygen Doxyfile
+        execute_process(
+          COMMAND cmake --build build --target docs_internal
+          RESULT_VARIABLE result
+        )
+        if (NOT result EQUAL 0)
+          message(FATAL_ERROR "Building internal documentation failed")
+        endif()
       if: matrix.config.name == 'Ubuntu Latest GCC Release'
 
     - name: Publish Internal documentation to Github pages
