--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -8,7 +8,7 @@ PROJECT_NAME           = Doxygen
 PROJECT_NUMBER         =
 PROJECT_BRIEF          =
 PROJECT_LOGO           =
-OUTPUT_DIRECTORY       = doxygen_docs
+OUTPUT_DIRECTORY       = @PROJECT_BINARY_DIR@/doxygen_docs
 CREATE_SUBDIRS         = YES
 CREATE_SUBDIRS_LEVEL   = 8
 ALLOW_UNICODE_NAMES    = NO
@@ -112,13 +112,13 @@ WARN_LOGFILE           =
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
 INPUT                  = \
-                         doc_internal/commands_history.md \
-                         doc_internal/commands_internal.md \
-                         doc_internal/releases.md \
-                         doc_internal/tags_history.md \
-                         src \
-                         vhdlparser \
-                         libxml
+                         @CMAKE_SOURCE_DIR@/doc_internal/commands_history.md \
+                         @CMAKE_SOURCE_DIR@/doc_internal/commands_internal.md \
+                         @CMAKE_SOURCE_DIR@/doc_internal/releases.md \
+                         @CMAKE_SOURCE_DIR@/doc_internal/tags_history.md \
+                         @CMAKE_SOURCE_DIR@/src \
+                         @CMAKE_SOURCE_DIR@/vhdlparser \
+                         @CMAKE_SOURCE_DIR@/libxml
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.h \
                          *.hpp \
@@ -166,7 +166,7 @@ HTML_FILE_EXTENSION    = .html
 HTML_HEADER            =
 HTML_FOOTER            =
 HTML_STYLESHEET        =
-HTML_EXTRA_STYLESHEET  = doc_internal/doc_internal.css
+HTML_EXTRA_STYLESHEET  = @CMAKE_SOURCE_DIR@/doc_internal/doc_internal.css
 HTML_EXTRA_FILES       =
 HTML_COLORSTYLE        = TOGGLE
 HTML_COLORSTYLE_HUE    = 220
@@ -297,9 +297,9 @@ ENABLE_PREPROCESSING   = YES
 MACRO_EXPANSION        = YES
 EXPAND_ONLY_PREDEF     = YES
 SEARCH_INCLUDES        = YES
-INCLUDE_PATH           = libmd5 \
-                         liblodepng \
-                         libmscgen
+INCLUDE_PATH           = @CMAKE_SOURCE_DIR@/libmd5 \
+                         @CMAKE_SOURCE_DIR@/liblodepng \
+                         @CMAKE_SOURCE_DIR@/libmscgen
 INCLUDE_FILE_PATTERNS  =
 PREDEFINED             =
 EXPAND_AS_DEFINED      = DOC_NODES DN_SEP DN
