resolving the segfault in Fortran parser.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -229,6 +229,7 @@ add_library(doxymain STATIC
     condparser.cpp
     context.cpp
     cppvalue.cpp
+    #datetime.cpp
     defgen.cpp
     definition.cpp
     dia.cpp
