--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -142,7 +142,7 @@ jobs:
       shell: bash
       run: |
         ./miktexsetup_standalone --verbose \
-                      --local-package-repository=C:/miktex-repository \
+                      --local-package-repository="C:/miktex-repository" \
                       --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
                       --package-set=essential \
                       download
@@ -151,7 +151,8 @@ jobs:
     - name: Install MikTex packages (Windows)
       shell: bash
       run: |
-        ./miktexsetup_standalone --local-package-repository=C:/miktex-repository \
+        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
+                      --log-file="C:/miktex-repository/out.log" \
                       --package-set=essential \
                       --shared \
                       install
