--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -152,7 +152,7 @@ jobs:
       shell: bash
       run: |
         ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
-                      --log-file="C:/miktex-repository/out.log" \
+                      --verbose \
                       --package-set=essential \
                       --shared \
                       install
