Make path of examples independent of `..`
Make the paths in the examples so they are not referring to `..` so the examples can also be run standalone inplace and use an inplace html / latex directory.

--- a/examples/baseexample.cfg
+++ b/examples/baseexample.cfg
@@ -1,4 +1,4 @@
-OUTPUT_DIRECTORY   = ..
+OUTPUT_DIRECTORY   = $(PROJECT_BINARY_DIR)
 CASE_SENSE_NAMES   = NO
 QUIET              = YES
 JAVADOC_AUTOBRIEF  = YES
