--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -112,6 +112,7 @@ WARN_LOGFILE           =
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
 INPUT                  = \
+                         @CMAKE_SOURCE_DIR@/doc_internal/doxygen.md \
                          @CMAKE_SOURCE_DIR@/doc_internal/commands_history.md \
                          @CMAKE_SOURCE_DIR@/doc_internal/commands_internal.md \
                          @CMAKE_SOURCE_DIR@/doc_internal/releases.md \
