--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -13,77 +13,77 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "Ubuntu Latest GCC Release",
-            os: ubuntu-20.04,
-            build_type: "Release", cc: "gcc", cxx: "g++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest GCC Debug",
-            os: ubuntu-20.04,
-            build_type: "Debug", cc: "gcc", cxx: "g++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest Clang Release",
-            os: ubuntu-20.04,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest Clang Debug",
-            os: ubuntu-20.04,
-            build_type: "Debug", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
-          }
-        - {
-            name: "macOS Latest Release",
-            os: macos-latest,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
-        - {
-            name: "macOS Latest Debug",
-            os: macos-latest,
-            build_type: "Debug", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
+#        - {
+#            name: "Ubuntu Latest GCC Release",
+#            os: ubuntu-20.04,
+#            build_type: "Release", cc: "gcc", cxx: "g++",
+#            build_gen: "Unix Makefiles",
+#            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
+#          }
+#        - {
+#            name: "Ubuntu Latest GCC Debug",
+#            os: ubuntu-20.04,
+#            build_type: "Debug", cc: "gcc", cxx: "g++",
+#            build_gen: "Unix Makefiles",
+#            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
+#          }
+#        - {
+#            name: "Ubuntu Latest Clang Release",
+#            os: ubuntu-20.04,
+#            build_type: "Release", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles",
+#            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
+#          }
+#        - {
+#            name: "Ubuntu Latest Clang Debug",
+#            os: ubuntu-20.04,
+#            build_type: "Debug", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles",
+#            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
+#          }
+#        - {
+#            name: "macOS Latest Release",
+#            os: macos-latest,
+#            build_type: "Release", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
+#        - {
+#            name: "macOS Latest Debug",
+#            os: macos-latest,
+#            build_type: "Debug", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
         - {
             name: "Windows Latest MSVC Debug", 
             os: windows-latest,
             build_type: "Debug", cc: "cl", cxx: "cl",
             build_gen: "NMake Makefiles"
           }
-        - {
-            name: "Windows Latest MSVC Release", 
-            os: windows-latest,
-            build_type: "Release", cc: "cl", cxx: "cl",
-            build_gen: "NMake Makefiles"
-          }
+#        - {
+#            name: "Windows Latest MSVC Release", 
+#            os: windows-latest,
+#            build_type: "Release", cc: "cl", cxx: "cl",
+#            build_gen: "NMake Makefiles"
+#          }
     steps:
     - name: Checkout doxygen
       uses: actions/checkout@v3
       
-    - name: Download MikTex (Windows)
-      run: |
-        $wc = New-Object System.Net.WebClient;
-        $maxAttempts=5;
-        $attemptCount=0;
-        Do {
-          $attemptCount++;
-          Try {
-            $wc.DownloadFile("https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip","miktexsetup-5.2.0+b8f430f-x64.zip")
-          } Catch [Exception] {
-            Write-Host $_.Exception | format-list -force
-          }
-        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
-      shell: pwsh
-      if: matrix.config.os == 'windows-latest'
+#    - name: Download MikTex (Windows)
+#      run: |
+#        $wc = New-Object System.Net.WebClient;
+#        $maxAttempts=5;
+#        $attemptCount=0;
+#        Do {
+#          $attemptCount++;
+#          Try {
+#            $wc.DownloadFile("https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip","miktexsetup-5.2.0+b8f430f-x64.zip")
+#          } Catch [Exception] {
+#            Write-Host $_.Exception | format-list -force
+#          }
+#        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
+#      shell: pwsh
+#      if: matrix.config.os == 'windows-latest'
       
     - name: Install libiconv (Windows)
       uses: suisei-cn/actions-download-file@v1
@@ -105,6 +105,13 @@ jobs:
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
       if: matrix.config.os == 'macos-latest'
     
+    - name: Install LaTeX (Windows)
+      uses: teatimeguest/setup-texlive-action@v2
+      with:
+        packages: >-
+          scheme-full
+      if: matrix.config.os == 'windows-latest'
+
     - name: Install libclang (Ubuntu 20.04)
       run: |
         sudo apt update
@@ -132,41 +139,41 @@ jobs:
         sudo apt install libxapian-dev
       if: matrix.config.os == 'ubuntu-20.04'
           
-    - name: Extract MikTex zip (Windows)
-      shell: bash
-      run: |
-        unzip miktexsetup-5.2.0+b8f430f-x64.zip
-      if: matrix.config.os == 'windows-latest'
-
-    - name: Download MikTex packages (Windows)
-      shell: bash
-      run: |
-        ./miktexsetup_standalone --verbose \
-                      --local-package-repository="C:/miktex-repository" \
-                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
-                      --package-set=essential \
-                      download
-      if: matrix.config.os == 'windows-latest'
-
-    - name: Install MikTex packages (Windows)
-      shell: bash
-      run: |
-        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
-                      --verbose \
-                      --package-set=essential \
-                      --shared \
-                      install
-      if: matrix.config.os == 'windows-latest'
-
-    - name: Setting MikTex paths (Windows)
-      shell: bash
-      run: |
-        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
-        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
-        
-        echo "Configuring MiKTeX to install missing packages on the fly"
-        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
-      if: matrix.config.os == 'windows-latest'
+#    - name: Extract MikTex zip (Windows)
+#      shell: bash
+#      run: |
+#        unzip miktexsetup-5.2.0+b8f430f-x64.zip
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Download MikTex packages (Windows)
+#      shell: bash
+#      run: |
+#        ./miktexsetup_standalone --verbose \
+#                      --local-package-repository="C:/miktex-repository" \
+#                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
+#                      --package-set=essential \
+#                      download
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Install MikTex packages (Windows)
+#      shell: bash
+#      run: |
+#        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
+#                      --verbose \
+#                      --package-set=essential \
+#                      --shared \
+#                      install
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Setting MikTex paths (Windows)
+#      shell: bash
+#      run: |
+#        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
+#        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
+#        
+#        echo "Configuring MiKTeX to install missing packages on the fly"
+#        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
+#      if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
       run: |
