--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -357,21 +357,21 @@ jobs:
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Running tests failed!")
         endif()
-      if: matrix.config.os != 'windows-latest'
-
-    - name: Run tests (Windows)
-      shell: cmake -P {0}
-      run: |
-        set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
-
-        execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd"
-          RESULT_VARIABLE result
-        )
-        if (NOT result EQUAL 0)
-          message(FATAL_ERROR "Running tests failed!")
-        endif()
-      if: matrix.config.os == 'windows-latest'
+#      if: matrix.config.os != 'windows-latest'
+#
+#    - name: Run tests (Windows)
+#      shell: cmake -P {0}
+#      run: |
+#        set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
+#
+#        execute_process(
+#          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd"
+#          RESULT_VARIABLE result
+#        )
+#        if (NOT result EQUAL 0)
+#          message(FATAL_ERROR "Running tests failed!")
+#        endif()
+#      if: matrix.config.os == 'windows-latest'
 
     - name: Generate documentation
       shell: cmake -P {0}
