--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -357,10 +357,8 @@ jobs:
         )
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Running tests failed!")
-          echo ::set-output name=test_053::$(cat Vbuild/testing/test_output_053/latex/refman.log)
-          echo ::set-output name=test_065::$(cat Vbuild/testing/test_output_065/latex/refman.log)
-          echo ${{ steps.test.outputs.test_053 }}
-          echo ${{ steps.test.outputs.test_065 }}
+          echo "$(cat Vbuild/testing/test_output_053/latex/refman.log)"
+          echo "$(cat Vbuild/testing/test_output_065/latex/refman.log)"
         endif()
 #      if: matrix.config.os != 'windows-latest'
 #
