--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -357,8 +357,8 @@ jobs:
         )
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Running tests failed!")
-          echo "$(cat Vbuild/testing/test_output_053/latex/refman.log)"
-          echo "$(cat Vbuild/testing/test_output_065/latex/refman.log)"
+          echo $(cat build/testing/test_output_053/latex/refman.log)
+          echo $(cat build/testing/test_output_065/latex/refman.log)
         endif()
 #      if: matrix.config.os != 'windows-latest'
 #
