--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -356,9 +356,9 @@ jobs:
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
-          echo ::set-output name=version::$(cat VERSION)
+          echo "name=version::$(cat VERSION)" >> $GITHUB_OUTPUT
           echo ${{ steps.test.outputs.version }}
-          echo ::set-output name=tst_053::$(cat build/testing/test_output_053/latex/refman.log)
+          echo "name=tst_053::$(cat build/testing/test_output_053/latex/refman.log)" >> $GITHUB_OUTPUT
           echo ${{ steps.test.outputs.tst_053 }}
           message(FATAL_ERROR "Running tests failed!")
         endif()
