--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -69,21 +69,21 @@ jobs:
     - name: Checkout doxygen
       uses: actions/checkout@v3
       
-    - name: Download MikTex (Windows)
-      run: |
-        $wc = New-Object System.Net.WebClient;
-        $maxAttempts=5;
-        $attemptCount=0;
-        Do {
-          $attemptCount++;
-          Try {
-            $wc.DownloadFile("https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip","miktexsetup-5.2.0+b8f430f-x64.zip")
-          } Catch [Exception] {
-            Write-Host $_.Exception | format-list -force
-          }
-        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
-      shell: pwsh
-      if: matrix.config.os == 'windows-latest'
+#    - name: Download MikTex (Windows)
+#      run: |
+#        $wc = New-Object System.Net.WebClient;
+#        $maxAttempts=5;
+#        $attemptCount=0;
+#        Do {
+#          $attemptCount++;
+#          Try {
+#            $wc.DownloadFile("https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip","miktexsetup-5.2.0+b8f430f-x64.zip")
+#          } Catch [Exception] {
+#            Write-Host $_.Exception | format-list -force
+#          }
+#        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
+#      shell: pwsh
+#      if: matrix.config.os == 'windows-latest'
       
     - name: Install libiconv (Windows)
       uses: suisei-cn/actions-download-file@v1
@@ -132,40 +132,50 @@ jobs:
         sudo apt install libxapian-dev
       if: matrix.config.os == 'ubuntu-20.04'
           
-    - name: Extract MikTex zip (Windows)
-      shell: bash
-      run: |
-        unzip miktexsetup-5.2.0+b8f430f-x64.zip
-      if: matrix.config.os == 'windows-latest'
+#    - name: Extract MikTex zip (Windows)
+#      shell: bash
+#      run: |
+#        unzip miktexsetup-5.2.0+b8f430f-x64.zip
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Download MikTex packages (Windows)
+#      shell: bash
+#      run: |
+#        ./miktexsetup_standalone --verbose \
+#                      --local-package-repository="C:/miktex-repository" \
+#                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
+#                      --package-set=essential \
+#                      download
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Install MikTex packages (Windows)
+#      shell: bash
+#      run: |
+#        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
+#                      --verbose \
+#                      --package-set=essential \
+#                      --shared \
+#                      install
+#      if: matrix.config.os == 'windows-latest'
+#
+#    - name: Setting MikTex paths (Windows)
+#      shell: bash
+#      run: |
+#        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
+#        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
+#        
+#        echo "Configuring MiKTeX to install missing packages on the fly"
+#        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
+#      if: matrix.config.os == 'windows-latest'
 
-    - name: Download MikTex packages (Windows)
-      shell: bash
-      run: |
-        ./miktexsetup_standalone --verbose \
-                      --local-package-repository="C:/miktex-repository" \
-                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
-                      --package-set=essential \
-                      download
-      if: matrix.config.os == 'windows-latest'
-
-    - name: Install MikTex packages (Windows)
-      shell: bash
-      run: |
-        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
-                      --verbose \
-                      --package-set=essential \
-                      --shared \
-                      install
-      if: matrix.config.os == 'windows-latest'
-
-    - name: Setting MikTex paths (Windows)
-      shell: bash
-      run: |
-        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
-        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
-        
-        echo "Configuring MiKTeX to install missing packages on the fly"
-        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
+    - name: Install LaTeX (Windows)
+      uses: teatimeguest/setup-texlive-action@v2
+      with:
+        packages: >-
+          scheme-medium
+          babel-dutch
+          cjk
+          bibtex
       if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
@@ -358,7 +368,7 @@ jobs:
         set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
 
         execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd"
+          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --pdf"
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
@@ -376,7 +386,6 @@ jobs:
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Building documentation failed")
         endif()
-      if: matrix.config.os != 'windows-latest'
 
     - name: Archive html documentation artifacts
       uses: actions/upload-artifact@v3
