Replace MiKTeX by tlmgr for Windows
Looks like the `varwidth.sty` is missing which is needed by `tabu_doxygen` (that is a direct, older, clone of the `tabu` package).

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -176,6 +176,7 @@ jobs:
           babel-dutch
           cjk
           bibtex
+          tabu
       if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
