Replace MiKTeX by tlmgr for Windows
Needed also multirow, so including collection-latexextra (includes also tabu).

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -173,10 +173,10 @@ jobs:
       with:
         packages: >-
           scheme-medium
+          collection-latexextra
           babel-dutch
           cjk
           bibtex
-          tabu
       if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
