--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -232,17 +232,7 @@ jobs:
 
     - name: Install Graphviz (MacOS)
       run: |
-        # homebrew fails to update python from 3.9 to 3.10 due to unlinking failure (see https://github.com/actions/runner-images/issues/6817)
-        rm /usr/local/bin/2to3 || true
-        rm /usr/local/bin/2to3-3.11 || true
-        rm /usr/local/bin/idle3 || true
-        rm /usr/local/bin/idle3.11 || true
-        rm /usr/local/bin/pydoc3 || true
-        rm /usr/local/bin/pydoc3-3.11 || true
-        rm /usr/local/bin/python3 || true
-        rm /usr/local/bin/python3-3.11 || true
-        rm /usr/local/bin/python3-config || true
-        rm /usr/local/bin/python3-config3.11 || true
+        brew link --overwrite python@3.11
         brew install graphviz
       if: matrix.config.os == 'macos-latest'
 
