Improve debugging for lexical scanners
- Debug builds now have lex debugging compiled in by default
- For a release build option `enable_lex_debug` can enabled to compile
  in debug support.
- Option `-d lex` will now turn on debugging output for all lexers.
- Option `-d lex:name` will turn on debugging for lexer `name` only.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -388,7 +388,7 @@ if (use_libclang)
     target_compile_definitions(doxygen PRIVATE ${LLVM_DEFINITIONS})
 endif()
 
-if((CMAKE_BUILD_TYPE EQUAL "DEBUG") OR enable_tracing)
+if((CMAKE_BUILD_TYPE STREQUAL "Debug") OR enable_tracing)
     target_compile_definitions(doxycfg  PRIVATE -DENABLE_TRACING=1)
     target_compile_definitions(doxymain PRIVATE -DENABLE_TRACING=1)
     target_compile_definitions(doxygen  PRIVATE -DENABLE_TRACING=1)
