--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ option(static_libclang "Link to a statically compiled version of LLVM/libclang."
 option(win_static      "Link with /MT in stead of /MD on windows" OFF)
 option(enable_console  "Enable that executables on Windows get the CONSOLE bit set for the doxywizard executable [development]"  OFF)
 option(enable_coverage "Enable coverage reporting for gcc/clang [development]" OFF)
-option(enable_tracing  "Enable tracing for release builds [development]" OFF)
+option(enable_tracing  "Enable tracing option in release builds [development]" OFF)
+option(enable_lex_debug "Enable debugging info for lexical scanners in release builds [development]" OFF)
 
 set(force_qt CACHE INTERNAL "Forces doxywizard to build using the specified major version, this can be Qt5 or Qt6")
 set_property(CACHE force_qt PROPERTY STRINGS OFF Qt6 Qt5)
@@ -152,6 +153,10 @@ if (BISON_VERSION VERSION_LESS 2.7)
 endif()
 find_package(Threads)
 find_package(Sanitizers)
+
+if ((CMAKE_BUILD_TYPE STREQUAL "Debug") OR enable_lex_debug)
+  set(LEX_FLAGS "${LEX_FLAGS} -d")
+endif()
 
 if (sqlite3)
   find_package(SQLite3 REQUIRED)
