Collect warnings and output them at the end
Introduced a new setting for `WARN_AS_ERROR` i.e. `FAIL_ON_WARNINGS_PRINT`.
Especially on CI systems when running large projects it can be hard to obtain all the warnings as either they are written to a file and the file is not accessible (anymore) or they are written between the progress messages.
With this new option the warnings are given always at the end of the run.

--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -104,7 +104,7 @@ WARN_IF_UNDOCUMENTED   = YES
 WARN_IF_DOC_ERROR      = YES
 WARN_IF_INCOMPLETE_DOC = YES
 WARN_NO_PARAMDOC       = NO
-WARN_AS_ERROR          = FAIL_ON_WARNINGS
+WARN_AS_ERROR          = FAIL_ON_WARNINGS_PRINT
 WARN_FORMAT            = "$file:$line: $text"
 WARN_LINE_FORMAT       = "at line $line of file $file"
 WARN_LOGFILE           =
