bug_143388 Explicit documentation should stand out from generated documentation
Implementing to have collapsible sections, with implementation for the `\param`, \tparam`, `\exception` and `\retval` commands.
Adding the new configuration format `enum` with the `list` type, i.e. a multiselect from a fixed list of possibilities.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -59,6 +59,7 @@ set(DOC_FILES
         expert_enum.png
         expert_int.png
         expert_list_dir.png
+        expert_list_enum.png
         expert_list_file.png
         expert_list_filedir.png
         expert_list_string.png
