--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -177,7 +177,7 @@ HTML_TIMESTAMP         = NO
 HTML_DYNAMIC_MENUS     = YES
 HTML_DYNAMIC_SECTIONS  = YES
 HTML_INDEX_NUM_ENTRIES = 100
-GENERATE_DOCSET        = YES
+GENERATE_DOCSET        = NO
 DOCSET_FEEDNAME        = "Doxygen docs"
 DOCSET_FEEDURL         =
 DOCSET_BUNDLE_ID       = org.doxygen.Doxygen
