bug 615500 Program Icon under Windows
Analogous to the doxywizard adding an icon to the the other executables.
(Icon is less useful as the executables are command line executables, but in file viewers it has an advantage).

The chosen icon is the colored `d` from the doxygen color logo, which is converted to an icon.

--- a/addon/doxyapp/CMakeLists.txt
+++ b/addon/doxyapp/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
 
 add_executable(doxyapp
 doxyapp.cpp
+${PROJECT_SOURCE_DIR}/templates/icon/doxygen.rc
 )
 include(ApplyEditbin)
 apply_editbin(doxyapp console)
