Make the translator report available in the internal documentation
In the doxygen manual there is an overview of the status of the different translators, though there is a more detailed report available as well, this report has been made accessible in the internal documentation (so it is easier to find).

--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -117,6 +117,7 @@ INPUT                  = \
                          @CMAKE_SOURCE_DIR@/doc_internal/commands_internal.md \
                          @CMAKE_SOURCE_DIR@/doc_internal/releases.md \
                          @PROJECT_BINARY_DIR@/doc_internal/tags_history.md \
+                         @PROJECT_BINARY_DIR@/doc_internal/translator_report.md \
                          @CMAKE_SOURCE_DIR@/src \
                          @CMAKE_SOURCE_DIR@/vhdlparser \
                          @CMAKE_SOURCE_DIR@/libxml
